[project]
name = "unet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "kagglehub>=0.4.0",
    "python-dotenv>=1.2.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.6",
]
